--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -13,6 +13,7 @@
 		<button>로그인</button>
 	</form>
 	<a href="/oauth2/authorization/google">구글 로그인</a> <br>
+	<a href="/oauth2/authorization/facebook">페이스북 로그인</a> <br>
 	<a href="/joinForm" >회원가입을 하지않았으면 여기를 클릭하세요</a>
 </body>
 </html>
